versioned_docs/version-1.6/tutorial/configuring-sdk-for-saasus-platform.mdx
---
sidebar_position: 3
title: "Configuring SDK For SaaSus Platform"
slug: "configuring-sdk-for-saasus-platform"
excerpt: ""
hidden: false
createdAt: "Fri May 24 2024 05:24:59 GMT+0000 (Coordinated Universal Time)"
updatedAt: "Fri May 24 2024 05:24:59 GMT+0000 (Coordinated Universal Time)"
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

### Check your SaaS ID, API key, and client secret

First, view your API key in the **SaaSus Development Console**. <br/>
This key is used to configure the application.

A "SaaS ID" is typically generated by default.<br/>
If needed, you can use your existing SaaS ID or generate a new one by clicking the Reissue SaaS ID button.

In the initial state, an "API key" is not automatically generated.<br/>
If necessary, click the "Issue API Key" button to issue a new key.

:::info
Please note that if you reissue the SaaS ID after the SaaS operation has actually started, you will also need to update the SaaS ID used within the SaaS application.

Also, please be extremely careful not to leak your API key to outside parties. The API keys shown in this tutorial are no longer available.
:::

![01](/img/tutorial/configuring-sdk-for-saasus-platform/configuring-sdk-for-saasus-platform-01.png)

![02](/img/tutorial/configuring-sdk-for-saasus-platform/configuring-sdk-for-saasus-platform-02.png)

### Preparing to use SaaSus SDK

Now, let's open the sample application we just prepared in the development environment.

As we did at the beginning, make sure that the docker container is started using init.sh and that the sample application is running at [http://localhost/board](http://localhost/board).

First, to use the SaaSus Platform, embed the SaaSus SDK into your application.

This time I'm using PHP, so I'll use composer.

Open a terminal, enter the php container, and use composer to set it up.

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```txt
repo$ docker compose exec php bash
root@xxx:/var/www# cd api
root@xxx:/var/www/api# composer config repositories.saasus-platform/saasus-sdk-php vcs https://github.com/saasus-platform/saasus-sdk-php
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```txt
repo$ docker compose exec node bash
```

```mdx-code-block
</TabItem>
</Tabs>
```

In the api directory, add it using the composer command.

```txt
root@xxx:/var/www/api# composer require saasus-platform/saasus-sdk-php
```

After installing SaaSus SDK, first let's define the environment variables required to use SaaSus SDK.

Create a .env file by copying the .env.example file in the api directory, and edit the following section at the bottom of the .env file.

```.env
### for SaaSus Platform
SAASUS_SAAS_ID="98tjo3wifaoua （Screen SaaS ID）"
SAASUS_API_KEY="kjntowjfoasnkjntwonsflajsno4as （Screen API Key）"
SAASUS_SECRET_KEY=" （Screen client secret）"
SAASUS_LOGIN_URL="https://auth.sample.saasus.jp/　（Login screen URL）"
```

For SAASUS_SAAS_ID, SAASUS_API_KEY, and SAASUS_SECRET_KEY, set the SaaS ID, API key, and client secret displayed on the screen earlier, and for SAASUS_LOGIN_URL, set the URL of the login screen created in the SaaSus development console.
